<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FF8D00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="#ffff"/>

    <EditText
        android:id="@+id/txt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/nama"
        android:textColor="#FFFFFF"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilihan_sambal"
        android:textColor="#000000"/>


    <CheckBox
        android:id="@+id/chx_tomat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/sambal_tomat"/>

    <CheckBox
        android:id="@+id/chx_Setan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sambal_setan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/banyaknya"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="tambah"
            android:text="+"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_jumlah"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="0"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tambah"
            android:text="+"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:text="@string/hasil"
        android:textColor="#000000"/>


    <TextView
        android:id="@+id/txt_getNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="25dp"/>

    <Button
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:onClick="order"
        android:text="@string/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>







    </LinearLayout>


</ScrollView>

